tests/integration/screens/snapshots/r#mod__integration__screens__info_dialog_test__info_dialog_snapshot_default.snap
---
source: tests/integration/screens/info_dialog_test.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                   ┌──────────────Information & Links───────────────┐                                   
                                   │                                                │                                   
                                   │ > GitHub Repository                            │                                   
                                   │   X #gittype                                   │                                   
                                   │   Close                                        │                                   
                                   │                                                │                                   
                                   │   [↑↓/JK] Navigate [SPACE] Select [ESC] Close  │                                   
                                   │                                                │                                   
                                   │                                                │                                   
                                   └────────────────────────────────────────────────┘
