tests/integration/screens/snapshots/r#mod__integration__screens__info_dialog_test__info_dialog_snapshot_fallback.snap
---
source: tests/integration/screens/info_dialog_test.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                              ┌──────────────Cannot open GitHub Repository───────────────┐                              
                              │                                                          │                              
                              │           Please copy and paste the URL below:           │                              
                              │         https://github.com/unhappychoice/gittype         │                              
                              │                                                          │                              
                              │                        [ESC] Back                        │                              
                              │                                                          │                              
                              └──────────────────────────────────────────────────────────┘
